remove unnec. font; figure out vertical-align issue

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -66,7 +66,8 @@ table{
 }
 
 body {
-  font-family: "novecento_widenormal";
+  font-family: "Helvetica";
+  font-weight: lighter;
 }
 
 html {
@@ -87,12 +88,12 @@ nav {
 
   nav > * {
     vertical-align: middle;
-    display: inline-block;
-    float: left;
+    display: inline;
   }
 
   nav .fb-like {
-    float: left;
+    margin-left: 1em;
+    height: 20px;
   }
 
 @font-face {
@@ -102,17 +103,6 @@ nav {
          url('../fonts/novecento/novecentowide-normal-webfont-webfont.woff') format('woff'),
          url('../fonts/novecento/novecentowide-normal-webfont-webfont.ttf') format('truetype'),
          url('../fonts/novecento/novecentowide-normal-webfont-webfont.svg#novecento_widenormal') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'ChunkFiveRegular';
-    src: url('../fonts/chunkfive/Chunkfive-webfont.eot');
-    src: url('../fonts/chunkfive/Chunkfive-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/chunkfive/Chunkfive-webfont.woff') format('woff'),
-         url('../fonts/chunkfive/Chunkfive-webfont.ttf') format('truetype'),
-         url('../fonts/chunkfive/Chunkfive-webfont.svg#ChunkFiveRegular') format('svg');
     font-weight: normal;
     font-style: normal;
 }
